--- a/consignment/src/style/milihjualapa.css
+++ b/consignment/src/style/milihjualapa.css
@@ -6,15 +6,15 @@
 
 .duapilihan{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 30px;
 }
 
 .pilihansellaproduct a {
     background-color: #FCDC00;
     color : rgba(0, 0, 0, 0.7);
-    width: 320px;
-    height: 320px;
+    width: 80vw;
+    height: 10vh;
     padding: 40px;
     display: flex;
     justify-content: center;
@@ -27,8 +27,8 @@
 .pilihansellaservice a {
     background-color: #FCDC00;
     color : rgba(0, 0, 0, 0.7);
-    width: 320px;
-    height: 320px;
+    width: 80vw;
+    height: 10vh;
     padding: 40px;
     display: flex;
     justify-content: center;
@@ -36,4 +36,25 @@
     text-align: center;
     border-radius: 20px;
     text-decoration: none;
+}
+
+.pagenotfound {
+    background: 
+        url('/public/img/group14.png'), /* Gambar */
+        linear-gradient(to bottom, #7ABCDE, #0072B8); /* Gradien */
+    background-size: 100% auto, cover; /* Gambar memenuhi lebar, tinggi disesuaikan, gradien tetap cover */
+    background-position: bottom; /* Posisi gambar di tengah */
+    background-repeat: no-repeat;
+    top: 0;
+    width: 100vw; /* Lebar penuh */
+    height: 100vh; /* Tinggi penuh */
+    margin: 0; /* Hilangkan margin */
+    padding: 0; /* Hilangkan padding */
+    display: flex; /* Gunakan flexbox untuk pemusatan */
+    justify-content: center; /* Pusatkan secara horizontal */
+    align-items: center; /* Pusatkan secara vertikal */
+    border: none; /* Hilangkan border */
+    outline: none; /* Hilangkan outline */
+    flex-direction: column;
+    gap: 20px;
 }
